@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020141116"
-#define public MagickPackageReleaseDate "snapshot-20141116"
+#define public MagickPackageVersionAddendum ".020141117"
+#define public MagickPackageReleaseDate "snapshot-20141117"
