@@ -1,3 +1,9 @@
+2014-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/FAQ.rst: Add a FAQ entry regarding what 'identify' reports.
+	Resolves SF issue #280 "Better documentation for spurious gm
+	identify in Q8 compilation."
+
 2014-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/enhance.c (ModulateImage): ModulateImage() should produce
